chore(SHS-6419): update max-width to avoid long captions overlaping with text box in banner images

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_pattern.carousel.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_pattern.carousel.scss
@@ -132,6 +132,10 @@
             @include grid-media-min('md') {
               right: 0;
               width: auto;
+              max-width: 30%;
+            }
+
+            @include grid-media-min('lg') {
               max-width: 40%;
             }
           }
